--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,6 +7,8 @@ Author: Jason Foster
 Maintainer: Jason Foster <jason.j.foster@gmail.com>
 Description: Fast and efficient computation of rolling and expanding principal component analysis for time-series data.
 License: GPL (>= 2)
+URL: https://github.com/jjf234/rollpca
+BugReports: https://github.com/jjf234/rollpca/issues
 Imports: Rcpp, RcppParallel
 LinkingTo: Rcpp, RcppArmadillo, RcppParallel, roll (>= 1.1.7)
 SystemRequirements: GNU make
