--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,11 @@
-Package: rollpca
+Package: rolleigen
 Type: Package
-Title: Rolling Principal Component Analysis
+Title: Rolling Eigenvalues and Eigenvectors
 Version: 1.0
 Date: YYYY-MM-DD
 Author: Jason Foster
 Maintainer: Jason Foster <jason.j.foster@gmail.com>
-Description: Fast and efficient computation of rolling and expanding principal component analysis for time-series data.
+Description: Fast and efficient computation of rolling and expanding eigenvalues and eigenvectors for time-series data.
 License: GPL (>= 2)
 URL: https://github.com/jjf234/rollpca
 BugReports: https://github.com/jjf234/rollpca/issues
