--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,4 +1,4 @@
-useDynLib(rollpca, .registration = TRUE)
+useDynLib(rolleigen, .registration = TRUE)
 export(roll_eigen, roll_pcr)
 importFrom(Rcpp, evalCpp)
 importFrom(RcppParallel, RcppParallelLibs)
