--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,7 +5,7 @@ Version: 1.0
 Date: YYYY-MM-DD
 Author: Jason Foster
 Maintainer: Jason Foster <jason.j.foster@gmail.com>
-Description: Fast and efficient computation of rolling and expanding eigenvalues and eigenvectors for time-series data.
+Description: Fast and efficient computation of rolling and expanding eigenanalysis for time-series data.
 License: GPL (>= 2)
 URL: https://github.com/jjf234/rollpca
 BugReports: https://github.com/jjf234/rollpca/issues
