--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,12 +3,12 @@ Type: Package
 Title: Rolling Eigenanalysis
 Version: 1.0
 Date: YYYY-MM-DD
-Author: Jason Foster
-Maintainer: Jason Foster <jason.j.foster@gmail.com>
+Authors@R: person("Jason", "Foster", , "jason.j.foster@gmail.com", c("aut", "cre"))
 Description: Fast and efficient computation of rolling and expanding eigenanalysis for time-series data.
 License: GPL (>= 2)
 URL: https://github.com/jasonjfoster/rolleigen
 BugReports: https://github.com/jasonjfoster/rolleigen/issues
+Depends: R (>= 3.0.2)
 Imports: Rcpp, RcppParallel
 LinkingTo: Rcpp, RcppArmadillo, RcppParallel, roll (>= 1.1.7)
 SystemRequirements: GNU make
